# driftwise

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: ignore.py
backend/ai/: triage.py
backend/costs/: azure_costs.py
backend/drift/: azure_fetcher.py  engine.py  parser.py  resource_graph.py
backend/remote/: azure_blob.py
cli/: main.py
cli/commands/: compare.py
tests/: test_azure_blob.py  test_azure_fetcher.py  test_costs.py  test_engine.py  test_parser.py  test_triage.py
tests/fixtures/: sample.tfstate
